# gmgm-sdk-py

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: live-verification.md
src/gmgn_sdk/: __init__.py  auth.py  client.py  config.py  constants.py  errors.py  models.py  signer.py  validation.py
tests/: conftest.py
tests/helpers/: contracts.py  sdk_contract.py
tests/integration/: test_client_contract.py  test_create_token_request_smoke.py  test_method_parity.py
tests/live/: test_live_swaps.py
tests/unit/: test_auth.py  test_config.py  test_contract_metadata.py  test_signer.py
