[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmgn-sdk"
version = "0.1.0"
description = "Unofficial Python SDK for the GMGN OpenAPI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "GMGN SDK Contributors"}]
keywords = ["gmgn", "crypto", "trading", "sdk", "openapi", "solana", "ethereum", "bsc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "cryptography>=42",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/QuantProcessing/gmgm-sdk-py"
Repository = "https://github.com/QuantProcessing/gmgm-sdk-py"
Issues = "https://github.com/QuantProcessing/gmgm-sdk-py/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.8",
  "pytest>=8",
  "pytest-mock>=3.12",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: isolated tests for pure helpers and contract metadata",
  "integration: contract tests for prepared request behavior and method parity",
  "live: tests that call the real GMGN API and may submit swaps",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["gmgn_sdk"]
strict = true
warn_unused_ignores = true
